# bevy_survivors

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aseprite  assets
.github/workflows/: ci.yaml  docs.yaml
aseprite/: Blood.aseprite  Bullet.aseprite  Fireball.aseprite  Jumper.aseprite  Jumper_aoe.aseprite  Jumper_aoe_indicator.aseprite  Lightning.aseprite  Orb.aseprite  Player.aseprite  Shooter.aseprite  Sprinter.aseprite  Thorn.aseprite  XP_GEM.aseprite  jumper_yellow.aseprite  shadow.aseprite  shooter_bullet.aseprite  sprinter_purple.aseprite  walker_purple.aseprite  walker_yellow.aseprite
assets/: Enemy.aseprite
assets/level/: basemap.ldtk  dungeon.ldtk
assets/shaders/: xp_bar.wgsl
assets/ui/: hud.aseprite
doc/: GDD.tex
docs/: book.toml
docs/src/: SUMMARY.md  intro.md
docs/src/enemies/: index.md  jumper.md  shooter.md  sprinter.md  swarm.md  types.md  walker.md
docs/src/items/: index.md
docs/src/levels/: index.md  mine.md
docs/src/spells/: index.md
docs/src/weapons/: celestial-orbs.md  fireball.md  index.md  magic-missile.md
docs/src/world/: hub.md  lore.md
src/: dev_tools.rs  enemy.rs  experience.rs  fixed_update_inspection.rs  input.rs  level.rs  lib.rs  main.rs  movement.rs  player.rs
src/audio/: mod.rs
src/camera/: mod.rs  zoom.rs
src/gameplay/: character_controller.rs  damage_numbers.rs  enemy.rs  experience.rs  healthbar.rs  mod.rs  movement.rs  player.rs  simple_animation.rs
src/gameplay/abilities/: dash.rs  heal.rs  mod.rs  shield.rs  summon.rs
src/gameplay/attacks/: fireball.rs  lightning.rs  mod.rs  orbs.rs  scale.rs
src/gameplay/enemy/: damage.rs  jumper.rs  mod.rs  shooter.rs  sprinter.rs  walker.rs
src/gameplay/items/: inventory.rs  items.rs  loader.rs  mod.rs  stats.rs
src/gameplay/level/: mod.rs
src/gameplay/levels/: mod.rs
src/gameplay/overlays/: experience.rs  hud.rs  level_up.rs  mod.rs
src/gameplay/player/: animation.rs  characters.rs  hit.rs  mod.rs  movement.rs
src/gameplay/spells/: circles.rs  dot.rs  energy.rs  fireball.rs  icelance.rs  lightning.rs  mod.rs  orbs.rs  scale.rs  thorn.rs
src/gameplay/waves/: mod.rs  waveplan.rs
src/gameplay/weapons/: circles.rs  components.rs  dot.rs  energy.rs  fireball.rs  icelance.rs  kind.rs  lightning.rs  mod.rs  orbs.rs  scale.rs  thorn.rs  weaponstats.rs
src/gameplay/weapons/assets/: debug.rs  loader.rs  mod.rs  spec.rs
src/gameplay/weapons/behaviours/: mod.rs
src/gameplay/weapons/behaviours/chain/: attack.rs  mod.rs  setup.rs
src/gameplay/weapons/behaviours/falling/: attack.rs  mod.rs  setup.rs
src/gameplay/weapons/behaviours/homing/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/weapons/behaviours/melee/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/weapons/behaviours/nova/: attack.rs  mod.rs  setup.rs
src/gameplay/weapons/behaviours/orbiters/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/weapons/behaviours/shared/: collision.rs  mod.rs  projectile_movement.rs
src/gameplay/weapons/behaviours/shot/: attack.rs  mod.rs  setup.rs
src/gameplay/weapons/behaviours/zone/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/weapons/runtime/: attacks.rs  sfx.rs  visuals.rs
src/gameplay/weapons/spec/: components.rs  loader.rs  mod.rs
src/gameplay/weapons/spec/apply/: attacks.rs  mod.rs  visuals.rs
src/gameplay/weapons/systems/: attack.rs  collision.rs  cooldown.rs  hit.rs  mod.rs  pickup.rs
src/gameplay/ws/: components.rs  kind.rs  mod.rs
src/gameplay/ws/assets/: debug.rs  loader.rs  mod.rs  spec.rs
src/gameplay/ws/behaviours/: mod.rs  shared.rs
src/gameplay/ws/behaviours/chain/: attack.rs  mod.rs  setup.rs
src/gameplay/ws/behaviours/falling/: attack.rs  mod.rs  setup.rs
src/gameplay/ws/behaviours/homing/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/ws/behaviours/nova/: attack.rs  setup.rs
src/gameplay/ws/behaviours/orbiters/: attack.rs  mod.rs  setup.rs
src/gameplay/ws/behaviours/shared/: collision.rs  mod.rs  projectile_movement.rs
src/gameplay/ws/behaviours/shot/: attack.rs  mod.rs  movement.rs  setup.rs
src/gameplay/ws/behaviours/zone/: mod.rs  setup.rs
src/gameplay/ws/runtime/: attacks.rs  mod.rs  sfx.rs  visuals.rs
src/gameplay/ws/systems/: attack.rs  cooldown.rs  hit.rs  pickup.rs
src/menus/: character_selection.rs  level_up.rs  main.rs  mod.rs  pause.rs  settings.rs
src/screens/: character_selection.rs  gameplay.rs  leevl_up.rs  level_up.rs  loading.rs  mod.rs  splash.rs  title.rs
src/theme/: animation.rs  interaction.rs  mod.rs  palette.rs  widget.rs
src/widgets/: mod.rs
