[package]
name = "bevy_survivors"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_sprite_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "reflect_auto_register",
  "wayland",
] }

# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

# Rand
bevy_rand = { version = "0.12", features = ["wyrand"] }
rand_core = "0.9"
rand = "0.9"

# World inspector
bevy-inspector-egui = "0.35"
# Handling user input
bevy_enhanced_input = "0.20"
# Sound
bevy_seedling = { version = "0.6.0", default-features = false, features = [
  "ogg",
  "mp3",
  "wav",
] }
bevy_ecs_tiled = { version = "0.10", features = ["avian"] }
# Physics engine 
avian2d = { version = "0.4", default-features = false, features = [
  "2d",
  "f32",
  "default-collider",
  "parry-f32",
  "debug-plugin",
] }

# Latest version that works with bevy_seedling
wasm-bindgen = { version = "=0.2.101", optional = true, default-features = false }

[features]
default = ["dev_native"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[package.metadata.bevy_cli.release]
# Disable debug functionality in release builds.
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
